added redis and generated swagger

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,7 +7,8 @@
 422.000=This spotify ID is already in use.
 422.001=It wasn't possible to retrieve playlists for the given category ID.
 422.002=It wasn't possible to generate a valid spotify token.
-422.003=There is no spotify category available for the given category ID    .
+422.003=There is no spotify category available for the given category ID.
 422.004=There is no spotify playlist available for the given playlist ID.
 422.005=There is no spotify profile available for the given spotify ID.
 422.006=It wasn't possible to retrieve data from Open Weather API.
+422.007=It wasn't possible to retrieve data.
